sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:14: error: not found: type int
def sauter(j:int, i:int, indLastValue:Int){
             ^AlgInsertionSort:14: error: not found: type int
def sauter(j:int, i:int, indLastValue:Int){
                    ^AlgInsertionSort:16: error: not found: value v
    if(getValue(i-j-1) > v){
                         ^AlgInsertionSort:18: error: reassignment to val
      indLastValue = i-j-1; 
                   ^AlgInsertionSort:21: error: not found: value v
      setValue(indLastValue, v);
                             ^