sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  
  for(i<- 1 to getValueCount()-1){
	  var indLastValue = i;
    var v = getValue(i);
    
		sauter();
  }
  
}


def sauter(j:int, i:int, indLastValue:Int){
  for(j <- 0 to i-1){
    if(getValue(i-j-1) > v){
      copy(i-j-1,i-j);
      indLastValue = i-j-1; 
    }
    else {
    	setValue(indLastValue, v);
    	return;
    }
  }
}